--- a/code_gui/CMakeLists.txt
+++ b/code_gui/CMakeLists.txt
@@ -2,8 +2,8 @@ cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
 # set(PROJ_NAME SWNS)
 # project(${PROJ_NAME})
 set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_BUILD_TYPE "Debug")
-# set(CMAKE_BUILD_TYPE Release)
+#set(CMAKE_BUILD_TYPE "Debug")
+set(CMAKE_BUILD_TYPE Release)
 set(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR})  #设置程序安装目录
 # set(CMAKE_INSTALL_PREFIX ../../) 
 
